all images added to 02.md
How to add audio files?

--- a/_units/02.md
+++ b/_units/02.md
@@ -43,11 +43,13 @@ all the way up to the secondary auditory cortex. The auditory periphery includes
 at the auditory nerve, which leades from the cochlea to the brainstem. The central nervous system includes the
 brain and the spinal cord, and parts of the central nervous system involved in auditory function are in the brainstem, the midbrain, and the cerebral cortex. Afferent pathways include all neural pathways going from the auditory periphery to the cerebral cortex, whereas efferent pathways are all pathways coming from the cortex back to the periphery. Both pathways will be discussed in the present unit. Emphasis will be placed on the function as well as structure of each region along the auditory pathway.
 
-# TheEar
-An overview of the auditory periphery. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html)
+{% include figure url="/MUTOR/assets/unit3/aud_anatomy_overview.png" description="The Auditory Pathway" %}
 
-BrainstemPathways and
-An overview of the afferent auditory pathway in the central nervous system. 
+# TheEar
+An overview of the auditory periphery. 
+
+{% include figure url="/MUTOR/assets/unit3/ear_overview.png" description="The Ear" %}
+(image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html)
 
 # Structure vs Function
 
@@ -57,7 +59,8 @@ A detailed look at each anatomical region of the auditory system must include bo
 
 "The ear", for our purposes, is not just what sticks out on each side of your head. Although the visible part of the ear, also known as the pinna, constitutes the outer ear and plays an important role in hearing, TheEar also includes the middle, and inner ear, each of which has structures specialized for their functions. The middle ear has a series of ossicles, or tiny bones which conduct and amplify the sound signal. The inner ear is of vital importance to hearing as it includes the Cochlea, perhaps the most important structure in the auditory periphery, which transduces sound signals into nerve impulses.
 
-{% include figure url="/MUTOR/MUTOR-1_0-CNMAT/unit3/ear.gif" description="ear diagram" %}
+{% include figure url="/MUTOR/assets/unit3/ear_overview.png" description="The Ear" %}
+
 Overview of the ear, showing the outer, middle, and inner ear. (image source: Rossing et al, 2001)
    
 The outer ear includes the pinna, the visible portion of the ear coming out of the sides of the head. The pinna directs sound into the ear in a funnel-like manner, and the bony ridges of the pinna play an important role in sound localization. Sound waves approaching from the environment bounce off the bony ridges of the pinna such that the higher frequencies reflect off the bony ridges whereas the lower frequencies bend around the pinna. Using the information of how sounds are reflected along the pinna, localization of different frequencies is possible.
@@ -73,13 +76,16 @@ The middle ear. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/
 
 Middle ear bones, or ossicles, include the incus, malleus, and stapes. These ossicles vibrate as they receive sound vibrations from the tympanic membrane. One of the ossicles, the stapes, is attached to the oval window of the cochlea in the inner ear; thus the vibrations of the stapes is received by the cochlea.
 
+{% include figure url="/MUTOR/assets/unit3/ossicles_model.gif" description="Middle Ear Ossicles" %}
+
 A model of the middle ear ossicles
 
 The Eustachean tube is a fluid-filled tube that connects the middle ear to the pharynx (the back of the nose and throat). Its function is to adjust air pressure in the auditory system. When confronted with changes in air pressure, the Eustachean tube opens briefly to let air pressure equalize on either sides of the tube. It can also be opened voluntarily by yawning or opening one's mouth, as is often experienced during rapid air pressure changes in an airplane. The Eustachean tube also directs mucus away from the middle ear, and is occasionally the site of ear infections due to bacterial growth in the mucus lining of the tube.
 
 # Inner Ear
 
-MUTOR TiddlyWiki - Unit 3 on The Auditory System file:///Users/ploui/Documents/Classes/MUTOR/unit3 local/unit3...
+{% include figure url="/MUTOR/assets/unit3/innerear.gif" description="Inner Ear" %}
+
 The inner ear. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/eari.html)
 
 The inner ear is the region between the oval window and the auditory nerve. It consists of the semicircular canals and the cochlea, which includes various structures. The auditory nerve leads out of the cochlea and into the brainstem.
@@ -92,9 +98,13 @@ The cochlea, often referred to as the "hearing organ", is most important to the 
 
 The cochlea is a coiled, fluid-filled tubular structure. It is lined with membranes which divide the inside of the cochlea into fluid-filled compartments.
 
+{% include figure url="/MUTOR/assets/unit3/cochlea_dissected.png" description="Cochlea Dissected" %}
+
 (image source: http://www.iurc.montp.inserm.fr/cric/audition/english /cochlea/fcochlea.htm)
   
 A dissected cochlea of a human fetus.
+
+{% include figure url="/MUTOR/assets/unit3/cochlea_diagram.png" description="Cochlea Cross-section" %}
 
 A cross-sectional view of the cochlea shows that it is divided by the Reissner membrane, the tectorial membrane, and the basilar membrane.
 
@@ -108,24 +118,39 @@ Magnified diagram of the Organ of Corti, showing the basilar membrane, inner and
 
 When the cochlea is excited by sound coming in, vibrations are sent through the fluid-filled chambers, thus causing movement in the membranes in the Organ of Corti. The movements of the tectorial membrane excite the inner hair cells on the surface of the basilar membrane, thus causing the hair cells to open their channels and send nerve impulses on to the fibers of the auditory nerve.
 
+{% include figure url="/MUTOR/assets/unit3/organofcorti.png" description="Organ of Corti" %}
+
+Organ of Corti
+
+{% include figure url="/MUTOR/assets/unit3/organofcorti_states.png" description="States of the Organ of Corti" %}
+
 Inhibition and excitation of the organ of corti. a) Inhibition. b) Excitation.
 
 In its resting state, the basilar and tectorial membranes are parallel, the stereocilia (tiny hairs on the surface of the inner and outer hair cells) are relaxed and close together, and the ion channels between the stereocilia are closed. When sound excites the cochlea, its vibrations are sent down the fluid of the cochlea so that the basilar membrane is deflected. When the basilar membrane moves, the inner hair cells in the basilar membrane change shape, and the stereocilia on the inner hair cells are stretched, thus opening up the ion channels in the inner hair cells and causing a chemical transduction to occur within the cells. The chemical transduction of the inner hair cells results in the generation of the nerve impulse, which passes down the nerve fibers of the auditory nerve as neural firings. Thus the Organ of Corti is responsible for transducing sound signals into biological nerve impulses, so that hearing can occur.
 
+{% include figure url="/MUTOR/assets/unit3/ihc_mvnt.png" description="inner hair cells" %}
+
 Close-up of inner hair cells with stereocilia, which open when excited by incoming sound.
+
+{% include figure url="/MUTOR/assets/unit3/ihc_ohc.png" description="inner and outer hair cells" %}
+
+Electron microscropy showing one row of inner hair cells and three rows of outer hair cells.
 
 # Tonotopic Mapping
 
 The cochlea is a coiled structure, contains the entire length of the basilar membrane. The unrolled cochlea contains the straightened basilar membrane, which is sensitive to a gradient of frequencies. The basilar membrane is tonotopically mapped, which means that different parts of the basilar membrane are optimally sensitive to a gradient of frequencies. The base of the cochlea is sensitive to low frequencies whereas the apical end is most sensitive to the highest frequencies. Tonotopic mapping begins at the basilar membrane and is preserved all the way throughout the auditory system, maintaining its structure until the level of the PrimaryAuditoryCortex.
 
+{% include figure url="/MUTOR/assets/unit3/basilar_unrolled.gif" description="basilar membrane unrolled" %}
 (image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html) Drawing of the unrolled cochlea, showing the basilar membrane.
- 
+
+{% include figure url="/MUTOR/assets/unit3/animated_basilar.gif" description="basilar membrane traveling wave animation" %}
 (image source: http://www.cs.indiana.edu/~port/teach Animation of a wave travelling down the basilar membrane.
 /641/hearing.for.linguists.html)
 
+{% include figure url="/MUTOR/assets/unit3/tonotopy.png" description="tonotopy basilar membrane" %}
 (image source: Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length.
 
-{% include figure url="/MUTOR/MUTOR-1_0-CNMAT/unit3/bekesy.png" description="bekesy" %}
+{% include figure url="/MUTOR/assets/unit3/bekesy.png" description="von Bekesy data on tonotopy" %}
 (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746)
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stirrup. The point of optimal excitation moved further away from the stirrup as the stimulus frequency decreased.
@@ -133,11 +158,16 @@ The observation of tonotopic mapping on the basilar membrane was first made by G
 # Brainstem Pathways
 The brainstem and midbrain include a set of neural regions which relay the nerve impulses passed into the central nervous system via the auditory nerve. Each of these relay centers consists of a group of neurons specialized for computations which are important to the auditory system, such as amplitude change detection and sound source localization.
 
+{% include figure url="/MUTOR/assets/unit3/brainstem_anat.png" description="brainstem anatomy" %}
+
+{% include figure url="/MUTOR/assets/unit3/brainstem_diagram.png" description="brainstem diagram" %}
 (image source: http://serous.med.buffalo.edu/hearing/ic.html)
 
 Anatomy of the brainstem, with the auditory pathway highlighted.
 
 The auditory nerve leads out of the cochlea and into the brainstem. On the surface of the brainstem, the auditory and the vestibular nerves combine and constitute the VIIIth cranial nerve. A tumor in the VIIIth cranial nerve is called acoustic neuroma and can result in deafness.
+
+{% include figure url="/MUTOR/assets/unit3/cn8.jpg" description="Cranial Nerve VIII" %}
 
 Cranial nerve, with the VIIIth nerve (auditory nerve) in red.
 (image source: http://www.gwc.maricopa.edu/class/bio201)
@@ -165,9 +195,15 @@ The auditory system's ability to localize sounds depends to a certain extent on 
 
 Jeffress (1948) proposed a model of how the auditory system computes interaural time differences so as to localize sounds. The model involved a coincidence detector in the brain, in the form of a set of neurons that fire when the two sounds from the left and right ears reach the neuron simultaneously. These coincidence detection neurons were later found in the Nucleus Leminaris of the owl (Carr & Konishi, 1988), which corresponds to the Medial Superior Olive of mammals (Smith et al, 1998). The Lateral Superior Olive was found to be sensitive to level differences between the ears. Since the MSO is sensitive to ITDs and the LSO is sensitive to ILDs, together the superior olivary complex is responsible for much of binaural hearing..
 
+{% include figure url="/MUTOR/assets/unit3/itd.jpg" description="interaural time difference" %}
+{% include figure url="/MUTOR/assets/unit3/ild.jpg" description="interaural level difference" %}
 Illustrations of the concepts of A) interaural time difference (ITD) and B) interaural level difference (ILD).
- 
-(image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection. B. Coincidence detectors for computing interaural time differences /yin/jorissmithyin98.pdf)
+
+{% include figure url="/MUTOR/assets/unit3/mso_coincidence1.jpg" description="A. model of coincidence detection" %}
+(image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection. 
+
+{% include figure url="/MUTOR/assets/unit3/mso_coincidence2.jpg" description="B. physiological implementation of coincidence detection" %}
+B. Coincidence detectors for computing interaural time differences /yin/jorissmithyin98.pdf)
 
 (ITDs) were found in the MSO of the cat.
 
@@ -179,6 +215,7 @@ The lateral lemniscus is anatomically divided into the Ventral, Dorsal, and Inte
 
 The inferior colliculus is a collection of nuclei which receives input from the axons of the lateral lemniscus and is located in the midbrain. It operates as a site of early communication between the visual and auditory senses, as well as a feedback-providing mechanism which provides output to the cochlea.
 
+{% include figure url="/MUTOR/assets/unit3/ic.jpg" description="Inferior Colliculus" %}
 (image source: http://serous.med.buffalo.edu/hearing/ic.html) Cross-section of the midbrain, with the inferior colliculi highlighted in blue.
 
 The inferior colliculus is one of the most important relay centers in the auditory system. Roles of the inferior colliculus include crossmodal communication, orienting to novel stimuli, providing efferent feedback, and detecting amplitude and frequency modulation.
@@ -193,7 +230,7 @@ Modulation detection refers to the ability of the auditory system to detect rapi
 
 One of the roles of the inferior colliculus, and also the inferior colliculus, seems to be to reflect amplitude modulation (McKinney et al, 2001). Amplitude modulation refers to the change in amplitude levels, usually at periodic rates. In musical performance, playing tremolo typically results in amplitude modulation. AM radio also relies on the application of amplitude modulation.
      
-/violin/tremolo.asp)
+{% include figure url="/MUTOR/assets/unit3/ttremolo.gif" description="tremolo" %}
 Tremolo - a case of amplitude modulation
 (image source: http://www.compositiontoday.com/sound_bank
 
@@ -203,18 +240,23 @@ The frequency of amplitude modulation can be represented by the modulation spect
 ## Medial Geniculate Nucleus
 The medial geniculate nucleus (MGN) is located In the thalamus, and is the last relay center before reaching the auditory cortex. The thalamus collects sensory input from multiple modalities and relays them to the cortex.
 The medial geniculate nucleus contains a division that is tonotopically organized. The primary function of the medial geniculate nucleus is to relay auditory impulses to the cortex.
- 
+
+{% include figure url="/MUTOR/assets/unit3/mgn.jpg" description="medial geniculus nucleus" %}
+
+The medial geniculate nuclei, shown here in green.
 (image source: http://sylvius.com) Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual capture and orienting.
 
 ## Auditory Cortex
 The auditory cortex is located just under the sylvian fissure, which is the fold that divides the temporal lobe from the frontal and parital lobes in the brain.
 
-The medial geniculate nuclei, shown here in green.
+{% include figure url="/MUTOR/assets/unit3/audctx1-2.png" description="auditory cortex" %}
 
 (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html)
 The Sylvian fissure, with the auditory cortex below it.
 
 The auditory cortex includes primary and secondary auditory cortices. The PrimaryAuditoryCortex (also known as A1) is located on the temporal plane, which is delineated by the Sylvian fissure on the top surface of the temporal lobe. The SecondaryAuditoryCortex (A2) surrounds the primary auditory cortex. The primary auditory cortex is tonotopically organized, with the lateral edge of the Sylvian fissure being sensitive to lower frequencies and the medial part of the cortex being sensitive to high frequencies. The primary auditory cortex is responsible for the perception of pitch, rhythm and duration, whereas the secondary auditory cortex is responsible for pattern perception, which includes the perception of speech and melodies. Persons with lesioned auditory cortices have trouble perceiving music; this is a condition known as amusia. (Peretz et al, 2003)
+
+{% include figure url="/MUTOR/assets/unit3/a1_a2.jpg" description="auditory cortex" %}
 
 (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html)
 
@@ -251,7 +293,9 @@ While various animals are able to hear and have auditory systems, only a few spe
 # Music in Other Species
 
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
-  
+
+{% include figure url="/MUTOR/assets/unit3/animal_song.jpg" description="animal songs" %}
+
 (image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
 make.
 
@@ -331,13 +375,18 @@ Ranges of hearing loss:
 * over 90 dB = Profound hearing loss
 source: http://www.hearinglife.com.au/tests.cfm)
 
+## ?? <- how to embed sounds? audiogram.aiff
 A demo of normal hearing vs. high-frequency hearing loss. The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
+
+{% include figure url="/MUTOR/assets/unit3/audiogram.gif" description="audiogram" %}
 
 An audiogram comparing normal hearing with hearing impairment due to loud noise. (image source:http://www.sfu.ca/sonic-studio/handbook/Audiogram.html)
 
+{% include figure url="/MUTOR/assets/unit3/audiogram_presby.gif" description="audiogram presbyacusis" %}
+{% include figure url="/MUTOR/assets/unit3/audiogram_familiar.jpg" description="auditory familiar sounds" %}
+
 Sample audiograms: a) audiogram showing presbyacusis, commonly observed as a "ski-slope" hearing loss (see TypesofHearingLoss). b) Audiograms of other types of hearing loss caused by sudden sounds. Curves are normalized according to the equal-loudness contours (see Fletcher-Munson curves from the previous unit).
-   
-(image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/audiom.html) 
+
 # Types of Hearing Loss
 
 Types of hearing loss are categorized by the site of biological abnormality. They commonly include conductive hearing loss, sensorineural hearing loss, and mixed hearing loss. In addition to these three types of hearing loss, cortical deafness and tinnitis are also causes of impaired hearing.
@@ -347,12 +396,14 @@ Conductive hearing loss is hearing damage due to obstruction, injury, or disease
 Sensorineural hearing loss refers to damage in the cochlea or the auditory nerve. Most commonly this involves damage in the inner and/or outer hair cells on the basilar membrane of the cochlea. Sensorineural hearing loss may result from old age, exposure to loud noises, and some drugs such as streptomyosin and other antibiotics which, when taken in large dosages, result in damage to the hair cells and the auditory nerve.
 
 Presbyacusis is the loss of hearing as a result of old age. The hearing loss quite common and is most prominent at high frequencies. While the healthy young individual can hear an optimal frequency range of 20-20,000Hz, The average 50 year old can no longer hear above 17,000Hz. Because of the shape of the audiogram, which relates audibility to frequency, the loss of high-frequency hearing due to sound exposure and old age is termed ski-slope hearing loss.
-    
-source: Rossing et al. 2001) Hair cell damage
+
+
+{% include figure url="/MUTOR/assets/unit3/normalvsdamaged.jpg" description="hair cell normal vs. damaged" %}
 
 (image source: http://www.hei.org/education/health/loss.htm) Normal versus damaged hair cells
 
-Audiogram showing presbyacusis, commonly observed as a "ski-slope" hearing loss, where "ski-slope" refers to the shape of the audiometry function, which is relatively intact at low frequencies, but falls off rapidly at high frequencies.
+{% include figure url="/MUTOR/assets/unit3/audiogram_presby.gif" description="presbyacusis audiogram" %}
+Presbyacusis is commonly observed as a "ski-slope" hearing loss, where "ski-slope" refers to the shape of the audiometry function, which is relatively intact at low frequencies, but falls off rapidly at high frequencies.
 (image source: http://www.hearinglife.com.au)
 
 ## Mixed hearing loss
@@ -371,6 +422,8 @@ Lars Ulrich from Metallica advocates protecting your hearing.
 
 (video source: http://www.hearnet.com/index.shtml) AvoidingLoudSounds
 
+{% include figure url="/MUTOR/assets/unit3/earmuffs.jpg" description="ear muffs" %}
+{% include figure url="/MUTOR/assets/unit3/earplugs.jpg" description="ear plugs" %}
 A rock concert generally produces sounds at around 100dB. While this is an extremely loud baseline of sound level, rock concerts tend to have relatively little dynamic variation. Sounds of 120dB or more are perceived as painfully loud.
 
 Hearing loss has been observed in individuals who are exposed to sounds at or above 100dB for two or more hours, and in individuals exposed to sounds 85dB or louder for eight or more hours. Relatively infrequent noise exposure can result in a temporary threshold shift, but repeated episodes of noise exposure will lead to permanent hearing damage.
@@ -379,6 +432,7 @@ Hearing loss has been observed in individuals who are exposed to sounds at or ab
 If you are continually exposed to sounds above 85dB, you should wear protective gear to avoid hearing damage. Various protective gear are available and useful in attenuating sound vibrations to the ear. Disposable ear plugs, most commonly made of cotton, or foam, can be inserted into the ear canal. They are effective in reducing noise by around 10dB. One can also get musicians' earplugs, or plastic earplugs fitted with rubber inserts that filter out sound. These can be custom made according to a mold of the user's ears. Custom-made earplugs provide 15-30dB of noise reduction, which makes them superior to foam or cotton earplugs, and can be used in loud environments such as rock concerts.
 For more powerful hearing protection, especially from sudden sounds such as gunshots, one can purchase over-the-ear muffs, which provide up to 40dB of sound attenuation. To ensure maximal hearing protection, the best strategy is to combine the uses of earplugs and ear muffs, as their added contribution to sound attenuation is more effective than their individual contributions.
 
+{% include figure url="/MUTOR/assets/unit3/protection_attenuation.gif" description="protection attenuation" %}
 Various types of hearing protection and their noise reduction rates, as a function of frequency. (image source: Rossing, Moore & Wheeler, 2001)
 
 # Summary
@@ -411,9 +465,9 @@ Neuroscience of Music, pp.168-180. Oxford University Press.
 * Get your own ear plugs: http://www.e-a-r.com
 
 # Quiz Items
-1. Layouttheanatomyoftheauditorypathway,fromthecochleatotheprimaryauditorycortex.
-1. Howdoesthestructureofthebasilarmembranereinforceitsfunction?
-1. Whichofthefollowingismostheavilyimplicatedinbeingabletoperceivelocationofsoundsources?
+1. Lay out the anatomy of the auditory pathway, from the cochlea to the primary auditory cortex.
+1. How does the structure of the basilar membrane reinforce its function?
+1. Which of the following is most heavily implicated in being able to perceive location of sound sources?
 a. inferior colliculus
 b. cochlea
 c. medial geniculat enucleus 
