--- a/_units/02.md
+++ b/_units/02.md
@@ -55,8 +55,8 @@ brain and the spinal cord, and parts of the central nervous system involved in a
 
 # Structure vs Function
 
+{% include note author="vg" text="I have commented all the descriptions and sources of the pictures on this Unit waiting for us to decide the way we will present this information. Everything is on the 02.md file so don't worrie is some information is missing!" %}
 {% comment %} An overview of the auditory periphery. {% endcomment %}
-
 {% include img-figure url="/MUTOR/assets/images/ear_overview.png" description="Overview of the Auditory Periphery: The Ear" %}
 {% comment %} (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html) {% endcomment %}
 
@@ -66,8 +66,8 @@ A detailed look at each anatomical region of the auditory system must include bo
 
 "The ear", for our purposes, is not just what sticks out on each side of your head. Although the visible part of the ear, also known as the pinna, constitutes the outer ear and plays an important role in hearing, TheEar also includes the middle, and inner ear, each of which has structures specialized for their functions. The middle ear has a series of ossicles, or tiny bones which conduct and amplify the sound signal. The inner ear is of vital importance to hearing as it includes the Cochlea, perhaps the most important structure in the auditory periphery, which transduces sound signals into nerve impulses.
 
+{% include note author="vg" text="I'm not so sure you wanted to use the same image two times Psyche. Wanted you to use another one? " %}
 {% include img-figure url="/MUTOR/assets/images/ear_overview.png" description="The Ear" %}
-
 {% comment %} Overview of the ear, showing the outer, middle, and inner ear. (image source: Rossing et al, 2001) {% endcomment %}
 {% comment %} I think one of this pictures doesn't correspond to the one Pyiche wanted to show. I kept both anyway. {% endcomment%}
 
@@ -261,7 +261,6 @@ Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual c
 The auditory cortex is located just under the sylvian fissure, which is the fold that divides the temporal lobe from the frontal and parital lobes in the brain.
 
 {% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." %}
-
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %} 
 
 The auditory cortex includes primary and secondary auditory cortices. The PrimaryAuditoryCortex (also known as A1) is located on the temporal plane, which is delineated by the Sylvian fissure on the top surface of the temporal lobe. The SecondaryAuditoryCortex (A2) surrounds the primary auditory cortex. The primary auditory cortex is tonotopically organized, with the lateral edge of the Sylvian fissure being sensitive to lower frequencies and the medial part of the cortex being sensitive to high frequencies. The primary auditory cortex is responsible for the perception of pitch, rhythm and duration, whereas the secondary auditory cortex is responsible for pattern perception, which includes the perception of speech and melodies. Persons with lesioned auditory cortices have trouble perceiving music; this is a condition known as amusia. (Peretz et al, 2003)
@@ -374,6 +373,7 @@ Famous people suffering from hearing loss (adapted from http://www.hearnet.com/)
 - Vanilla Fudge
 - William Shatner
 {% comment %} (video source: http://www.hearnet.com) MeasuringHearingDamage {% endcomment %}
+{% include note author="vg" text="Here you want to include one of your videos Psyche? Or you just want a link to the source?" %}
 
 # How do you know when you have damaged hearing?
 
@@ -386,11 +386,23 @@ Ranges of hearing loss:
 * 56 dB to 70 dB = Moderately Severe hearing loss
 * 71 dB to 90 dB = Severe hearing loss
 * over 90 dB = Profound hearing loss
-source: http://www.hearinglife.com.au/tests.cfm)
+{% comment %} source: http://www.hearinglife.com.au/tests.cfm) {% endcomment %}
 
-## ?? <- how to embed sounds? audiogram.aiff
+## Examples of Audiograms
 
-A demo of normal hearing vs. high-frequency hearing loss. The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/audiogram.mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
+  </body>
+</html>
+
+The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
 
 {% include img-figure url="/MUTOR/assets/images/audiogram.gif" description="Audiogram comparason: Normal Hearing Imparment due to Loud Noise" %}
 {% comment %} An audiogram comparing normal hearing with hearing impairment due to loud noise. (image source:http://www.sfu.ca/sonic-studio/handbook/Audiogram.html) {% endcomment %}
@@ -439,7 +451,7 @@ Lars Ulrich from Metallica advocates protecting your hearing.
 
 (video source: http://www.hearnet.com/index.shtml) AvoidingLoudSounds
             {% comment %} REAL LINK! {% endcomment %}
-
+{% include note author="vg" text="Here you want to include one of your videos Psyche? Or you just want a link to the source?" %}
 
 {% include img-figure url="/MUTOR/assets/images/earmuffs.jpg" description="Ear Muffs" %}
 {% include img-figure url="/MUTOR/assets/images/earplugs.jpg" description="Ear Plugs" %}
