change color, list
changed my color in notes and trying to make a list insde the list of Quiz in 02.md

--- a/_units/02.md
+++ b/_units/02.md
@@ -11,18 +11,18 @@ summary: In this unit we will explain how does it works the biological process o
 authors: 
  - Psyche Loui
 topics: [Auditory Pathway, Structures and functions, Acticve Ear, Evolution of the Auditory System, Music in other Species, Hearing Damage]
-test_questions:
+test_questions: 
  - Lay out the anatomy of the auditory pathway, from the cochlea to the primary auditory cortex.
  - How does the structure of the basilar membrane reinforce its function?
- - 1. Which of the following is most heavily implicated in being able to perceive location of sound sources?
-    inferior colliculus
-    cochlea
-    medial geniculat enucleus 
-    superior olivary nuclei
+ - Which of the following is most heavily implicated in being able to perceive location of sound sources?
+    - inferior colliculus
+    - cochlea
+    - medial geniculat enucleus 
+    - superior olivary nuclei
  - Which of the following methods of hearing protection is the most efficient at attenuating sound? 
-    earmuffs
-    cottonearplugs 
-    plasticinserts
+    1. earmuffs
+    2. cottonearplugs 
+    3. plasticinserts
     # we have to work on the presentation of this quiz/questions.
 
 layout: unit
